FIX: set table cell padding programatically, align vertically top

--- a/scss/report.scss
+++ b/scss/report.scss
@@ -13,7 +13,7 @@ div {
 }
 
 .container {
-    padding: 0px 25px;
+    padding: 0px 20px;
 }
 
 div.rpt-table-container {
@@ -56,7 +56,9 @@ div.rpt-table-container {
                 th {
                     border-bottom: (2 * $table-border-width) solid $table-header-separator;
                     font-weight: bold;
-                    padding-top: $table-header-padding-top;
+
+                    // padding-top: $table-header-padding-top;
+
                 }
             }
         }
@@ -73,6 +75,10 @@ div.rpt-table-container {
                     td {
                         border-bottom: $table-border-width solid $table-rowset-separator;
                     }
+                }
+
+                td {
+                    vertical-align: top;
                 }
             }
         }
